--- a/app/src/main/res/layout/quick_keyboard_button.xml
+++ b/app/src/main/res/layout/quick_keyboard_button.xml
@@ -23,4 +23,5 @@
     android:paddingRight="12dp"
     android:paddingStart="12dp"
     android:paddingTop="8dp"
+    android:tint="@color/textActionIconColor"
     tools:ignore="ContentDescription" />
