--- a/app/src/main/res/layout/settings__activity.xml
+++ b/app/src/main/res/layout/settings__activity.xml
@@ -14,6 +14,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/AppTheme.Unified"
     tools:context="net.gsantner.markor.activity.DocumentActivity">
 
     <android.support.design.widget.AppBarLayout
