--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -227,10 +227,6 @@
                         android:title="@string/editor_basic_color_scheme_black_or_white" />
                     <Preference
                         android:icon="@drawable/ic_palette_black_24dp"
-                        android:key="@string/pref_key__editor_basic_color_scheme_amoled"
-                        android:title="@string/editor_basic_color_scheme_amoled" />
-                    <Preference
-                        android:icon="@drawable/ic_palette_black_24dp"
                         android:key="@string/pref_key__editor_basic_color_scheme_solarized"
                         android:title="@string/editor_basic_color_scheme_solarized" />
                     <Preference
@@ -592,7 +588,7 @@
     <!-- Most important settings -->
     <PreferenceCategory android:title="@string/essential">
         <ListPreference
-            android:defaultValue="@string/app_theme_light"
+            android:defaultValue="@string/app_theme_auto"
             android:dialogTitle="@string/theme"
             android:entries="@array/pref_arrdisp__app_themes"
             android:entryValues="@array/pref_arrkeys__app_themes"
