--- a/app/src/main/res/layout/document__fragment__edit.xml
+++ b/app/src/main/res/layout/document__fragment__edit.xml
@@ -50,10 +50,12 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/textactions_bar_height"
         android:layout_gravity="bottom"
+        android:backgroundTint="@color/textActionBarColor"
         android:paddingTop="4dp">
 
         <LinearLayout
             android:id="@+id/document__fragment__edit__text_actions_bar"
+            android:backgroundTint="@color/textActionBarColor"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal" />
