--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Named colors -->
     <color name="colorPrimary">@color/primary_dark</color>
-    <color name="textActionBarColor">@color/lighter_grey</color>
-
-    <color name="background">#222222</color>
-    <color name="background_2">#424242</color>
     <color name="primary_text">@color/white</color>
     <color name="secondary_text">#9e9e9e</color>
+    <color name="background">@color/dark__background</color>
+    <color name="background_2">@color/dark__background_2</color>
+    <color name="textActionBarColor">@color/dark__background_2</color>
+    <color name="textActionIconColor">@color/white</color>
+    <color name="todo_txt__done">@color/todo_txt__done_dark</color>
+    <color name="todo_txt__date">@color/todo_txt__date_dark</color>
 
-    <color name="primary__greyish">#282828</color>
+    <!-- All values specified only in base colors.xml  -->
 
 </resources>
