--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,29 +10,41 @@
 #########################################################*/
 -->
 <resources>
+    <!-- Named colors -->
     <color name="colorPrimary">@color/primary</color>
-    <color name="colorAccent">@color/accent</color>
-    <color name="textActionBarColor">@color/background_2</color>
+    <color name="primary_text">@color/light__primary_text</color>
+    <color name="secondary_text">@color/light__secondary_text</color>
+    <color name="background">@color/light__background</color>
+    <color name="background_2">@color/light__background_2</color>
+    <color name="textActionBarColor">@color/lighter_grey</color>
+    <color name="textActionIconColor">@color/grey</color>
+    <color name="todo_txt__done">@color/todo_txt__done_light</color>
+    <color name="todo_txt__date">@color/todo_txt__date_light</color>
 
-    <!-- Colors from Palette -->
+    <!-- Named colors differing common to day and night -->
+    <color name="colorAccent">@color/accent</color>
+
+    <!-- Color values -->
     <color name="primary">#1E2135</color>
     <color name="primary_dark">#161828</color>
     <color name="primary_light">#CED9DD</color>
     <color name="accent">#F04B4B</color>
-    <color name="primary_text">#212121</color>
-    <color name="secondary_text">#727272</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#B6B6B6</color>
-    <!-- End colors from Palette -->
-
-    <color name="primary__greyish">#343434</color>
 
     <color name="accent_light">#FF9800</color>
     <color name="divider_2">#3d3d3d</color>
     <color name="default_link_color">#388E3C</color>
 
-    <color name="background">#eeeeee</color>
-    <color name="background_2">#f9f9f9</color>
+    <color name="light__background">#eeeeee</color>
+    <color name="light__background_2">#f9f9f9</color>
+    <color name="light__primary_text">#212121</color>
+    <color name="light__secondary_text">#757575</color>
+
+    <color name="dark__background">#222222</color>
+    <color name="dark__background_2">#424242</color>
+    <color name="dark__primary_text">@color/white</color>
+    <color name="dark__secondary_text">#9e9e9e</color>
 
     <color name="ic_launcher_background">#636363</color>
     <color name="white">#ffffffff</color>
@@ -59,4 +71,13 @@
     <color name="nord_fg_dark">#ECEFF4</color>
     <color name="nord_bg_light">#ECEFF4</color>
     <color name="nord_fg_light">#2E3440</color>
+
+    <color name="link">#ff1ea3fd</color>;
+
+    <color name="todo_txt__done_dark">#999d9d9d</color>
+    <color name="todo_txt__done_light">#993d3d3d</color>
+
+    <color name="todo_txt__date_dark">@color/todo_txt__done_dark</color>
+    <color name="todo_txt__date_light">#cc6d6d6d</color>
+
 </resources>
