--- a/app/src/main/res/layout/main__activity.xml
+++ b/app/src/main/res/layout/main__activity.xml
@@ -17,6 +17,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:theme="@style/AppTheme.Unified"
+    android:background="@color/background"
     tools:context="net.gsantner.markor.activity.MainActivity">
 
     <android.support.design.widget.AppBarLayout
