Tweaks to widget

--- a/app/src/main/res/layout/document__fragment__edit.xml
+++ b/app/src/main/res/layout/document__fragment__edit.xml
@@ -13,7 +13,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
+    android:background="@color/background_2"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
     tools:context="net.gsantner.markor.activity.DocumentEditFragment"
@@ -66,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="#F8D507"
+        android:background="@color/background"
         android:minHeight="@dimen/textactions_bar_height"
         android:padding="12dp"
         android:text="@string/warning_disallowed_sd_access"
