--- a/app/src/main/res/layout/action_order_activity.xml
+++ b/app/src/main/res/layout/action_order_activity.xml
@@ -11,7 +11,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.Light.AppBarOverlay">
+        android:theme="@style/AppTheme.Unified">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
