--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -192,7 +192,7 @@
                 android:title="@string/basic_color_scheme">
 
                 <other.com.flask.colorpicker.ColorPickerPreference
-                    android:defaultValue="@color/light__background"
+                    android:defaultValue="@color/background"
                     android:icon="@drawable/ic_border_outer_black_24dp"
                     android:key="@string/pref_key__editor_basic_color_scheme__bg_light"
                     android:title="BG Light" />
@@ -225,10 +225,6 @@
                         android:icon="@drawable/ic_palette_black_24dp"
                         android:key="@string/pref_key__editor_basic_color_scheme_blackorwhite"
                         android:title="@string/editor_basic_color_scheme_black_or_white" />
-                    <Preference
-                        android:icon="@drawable/ic_palette_black_24dp"
-                        android:key="@string/pref_key__editor_basic_color_scheme_amoled"
-                        android:title="@string/editor_basic_color_scheme_amoled" />
                     <Preference
                         android:icon="@drawable/ic_palette_black_24dp"
                         android:key="@string/pref_key__editor_basic_color_scheme_solarized"
@@ -586,7 +582,7 @@
     <!-- Most important settings -->
     <PreferenceCategory android:title="@string/essential">
         <ListPreference
-            android:defaultValue="@string/app_theme_light"
+            android:defaultValue="@string/app_theme_auto"
             android:dialogTitle="@string/theme"
             android:entries="@array/pref_arrdisp__app_themes"
             android:entryValues="@array/pref_arrkeys__app_themes"
