--- a/app/src/main/res/xml/prefactions_share_into.xml
+++ b/app/src/main/res/xml/prefactions_share_into.xml
@@ -39,8 +39,7 @@
         android:key="@string/pref_key__share_into__calendar_event"
         android:title="@string/calendar" />
 
-    <PreferenceCategory
-        android:title="@string/file_browser" />
+    <PreferenceCategory android:title="@string/file_browser" />
 
     <Preference
         android:icon="@drawable/ic_star_black_24dp"
