--- a/app/src/main/res/layout/list_group_history_item.xml
+++ b/app/src/main/res/layout/list_group_history_item.xml
@@ -4,10 +4,10 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceListItem"
-    android:gravity="center_vertical"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
     android:drawableLeft="@drawable/ic_history_black_24dp"
     android:drawablePadding="5dp"
-    android:paddingLeft="10dp" />
+    android:gravity="center_vertical"
+    android:paddingLeft="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:textAppearance="?android:attr/textAppearanceListItem" />
