--- a/app/src/main/res/layout/opoc_file__item.xml
+++ b/app/src/main/res/layout/opoc_file__item.xml
@@ -17,10 +17,10 @@
     android:background="@drawable/ui__file__item__selection_background"
     android:minHeight="50dp"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <ImageView
         android:id="@+id/file_identifier_icon"
