Support and display YAML-Block contents
Must be switched on in Settings / Markdown / Show YAML-Block.

These points apply:
* keys must consist of alpha-numeric characters, no spaces, punctuation,
  etc.
* attribute values are either strings or lists
* the `tags attribute` is special: if it's a string of comma-separated
  values, it is split into a real list
* single or double quotes surrounding a string are removed

The following two `tags` values are equivalent:

```
---
tags:
  - tag1
  - tag2
tags: tag1, tag2
---
```

Assume this block:

```
---
foo: bar
tags: tag1, tag2, tag3
alist:
  - an item
  - another item
---
```

The resulting HTML is:

```
<div class='yaml-front-matter-container'>
  <div class='yaml-front-matter yaml-foo-container'>
    <span class='yaml-foo-item'>
      bar
    </span>
  </div>
  <div class='yaml-front-matter yaml-tags-container'>
    <span class='yaml-tags-item'>
      tag1
    </span>
    <span class='yaml-tags-item'>
      tag2
    </span>
    <span class='yaml-tags-item'>
      tag3
    </span>
  </div>
  <div class='yaml-front-matter yaml-alist-container'>
    <span class='yaml-alist-item'>
      an item
    </span>
    <span class='yaml-alist-item'>
      another item
    </span>
  </div>
</div>
```

--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -465,6 +465,11 @@
                     android:key="@string/pref_key__markdown_render_math"
                     android:summary="@string/katex_latex"
                     android:title="@string/math" />
+                <CheckBoxPreference
+                    android:defaultValue="false"
+                    android:icon="@drawable/ic_visibility_black_24dp"
+                    android:key="@string/pref_key__markdown_display_yaml"
+                    android:title="@string/yaml" />
                 <MultiSelectListPreference
                     android:dialogTitle="@string/table_of_contents"
                     android:entries="@array/pref_arrdisp__markdown_toc"
