markdown: Support and display YAML front-matter block contents, by @fgtham @gsantner (PR #1597)
Co-authored-by: Florian Tham <fgt@mailbox.org>
Co-authored-by: Gregor Santner <gsantner@mailbox.org>

--- a/app/src/main/res/values/string-not_translatable.xml
+++ b/app/src/main/res/values/string-not_translatable.xml
@@ -33,6 +33,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="pdf" translatable="false">PDF</string>
     <string name="markdown" translatable="false">Markdown</string>
     <string name="backup" translatable="false">Backup</string>
+    <string name="front_matter" translatable="false">Front Matter</string>
 
     <string name="community" translatable="false">Community</string>
     <string name="default_font_family" translatable="false">sans-serif-regular</string>
@@ -186,6 +187,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="pref_key__inject_to_head" translatable="false">pref_key__inject_to_head</string>
     <string name="pref_key__inject_to_body" translatable="false">pref_key__inject_to_body</string>
     <string name="pref_key__markdown_render_math" translatable="false">pref_key__markdown_render_math</string>
+    <string name="pref_key__markdown_always_shown_yaml_front_matter_keys" translatable="false">pref_key__markdown_always_shown_yaml_front_matter_keys</string>
     <string name="pref_key__markdown_newline_newparagraph" translatable="false">pref_key__markdown_newline_newparagraph</string>
     <string name="pref_key__markdown_table_of_contents_enabled_levels" translatable="false">pref_key__markdown_table_of_contents_enabled_levels</string>
     <string name="pref_key__is_launcher_for_special_files_enabled" translatable="false">pref_key__is_launcher_for_special_files_enabled</string>
