--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -472,6 +472,12 @@
                     android:icon="@drawable/ic_list_black_24dp"
                     android:key="@string/pref_key__markdown_table_of_contents_enabled_levels"
                     android:title="@string/table_of_contents" />
+                <android.support.v7.preference.EditTextPreference
+                    android:defaultValue="title,tags,date"
+                    android:dialogMessage="@string/enter_yaml_front_matter_attributes_to_show"
+                    android:icon="@drawable/ic_list_black_24dp"
+                    android:key="@string/pref_key__markdown_always_shown_yaml_front_matter_keys"
+                    android:title="@string/front_matter" />
             </PreferenceCategory>
             <PreferenceCategory android:title="@string/textactions">
                 <Preference
