--- a/app/src/main/res/layout/quick_keyboard_button.xml
+++ b/app/src/main/res/layout/quick_keyboard_button.xml
@@ -12,15 +12,14 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="48dp"
     android:background="@drawable/keyboard_shortcut_button"
     android:gravity="center_vertical|center_horizontal"
-    android:minWidth="40dp"
-    android:minHeight="48dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
+    android:paddingLeft="6dp"
+    android:paddingRight="6dp"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
+    android:scaleType="centerInside"
     android:tint="@color/textActionIconColor"
     android:src="@drawable/ic_add_white_24dp"
     tools:ignore="ContentDescription" />
