--- a/app/src/main/res/layout/quick_keyboard_button.xml
+++ b/app/src/main/res/layout/quick_keyboard_button.xml
@@ -21,5 +21,5 @@
     android:paddingBottom="8dp"
     android:scaleType="centerInside"
     android:tint="@color/textActionIconColor"
-    android:src="@drawable/ic_add_white_24dp"
+    tools:src="@drawable/ic_check_box_black_24dp"
     tools:ignore="ContentDescription" />
