--- a/app/src/main/res/values/string-not_translatable.xml
+++ b/app/src/main/res/values/string-not_translatable.xml
@@ -229,6 +229,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="tmaid_common_toolbar_title_clicked_edit_action" translatable="false">tmaid_common_toolbar_title_clicked_edit_action</string>
     <string name="tmaid_common_move_text_one_line_up" translatable="false">tmaid_common_move_text_one_line_up</string>
     <string name="tmaid_common_move_text_one_line_down" translatable="false">tmaid_common_move_text_one_line_down</string>
+    <string name="tmaid_common_insert_snippet" translatable="false">tmaid_common_insert_snippet</string>
+    <string name="tmaid_common_insert_recent_snippet" translatable="false">tmaid_common_insert_recent_snippet</string>
 
     <string name="tmaid_markdown_quote" translatable="false">tmaid_markdown_quote</string>
     <string name="tmaid_markdown_h1" translatable="false">tmaid_markdown_h1</string>
@@ -335,5 +337,4 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="action_format_todotxt" translatable="false">action_format_todotxt</string>
     <string name="action_format_zimwiki" translatable="false">action_format_zimwiki</string>
     <string name="pref_key__share_into_format" translatable="false">pref_key__share_into_format</string>
-    <string name="tmaid_common_insert_snippet">tmaid_common_insert_snippet</string>
 </resources>
