Background shape and drawable

--- a/app/src/main/res/drawable/widget_background.xml
+++ b/app/src/main/res/drawable/widget_background.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/background_2" />
-    <corners android:radius="28dp" />
+    <corners android:radius="?attr/widgetCornerRadius" />
 </shape>
