Simplify TextAction handling code, by @harshad1 (PR #1626)
* Also fixes view state rotation and improves start position, closes  #1626 #1636 #1635

Co-authored-by: Gregor Santner <gsantner@mailbox.org>

--- a/app/src/main/res/layout/quick_keyboard_button.xml
+++ b/app/src/main/res/layout/quick_keyboard_button.xml
@@ -15,11 +15,11 @@
     android:layout_height="48dp"
     android:background="@drawable/keyboard_shortcut_button"
     android:gravity="center_vertical|center_horizontal"
-    android:paddingLeft="6dp"
-    android:paddingRight="6dp"
+    android:paddingLeft="4dp"
     android:paddingTop="8dp"
+    android:paddingRight="4dp"
     android:paddingBottom="8dp"
     android:scaleType="fitCenter"
     android:tint="@color/textActionIconColor"
-    tools:src="@drawable/ic_check_box_black_24dp"
-    tools:ignore="ContentDescription" />
+    tools:ignore="ContentDescription"
+    tools:src="@drawable/ic_check_box_black_24dp" />
