Replace discussion reference from Matrix to GitHub discussions, by @gsantner

--- a/app/src/main/res/values/string-not_translatable.xml
+++ b/app/src/main/res/values/string-not_translatable.xml
@@ -12,8 +12,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="app_name_real" translatable="false">Markor</string>
     <string name="app_name" translatable="false">@string/app_name_real</string>
     <string name="app_license_name" translatable="false">Apache 2.0</string>
-    <string name="app_community_url" translatable="false">https://matrix.to/#/#markor:matrix.org</string>
-    <string name="app_bugreport_url" translatable="false">https://github.com/gsantner/markor/discussions</string>
+    <string name="app_community_url" translatable="false">https://github.com/gsantner/markor/discussions</string>
+    <string name="app_bugreport_url" translatable="false">https://github.com/gsantner/markor/issues/new/choose</string>
     <string name="app_translate_url" translatable="false">https://crowdin.com/project/markor/invite</string>
 
     <string name="app_web_url" translatable="false">https://gsantner.net/project/markor.html?source=inapp</string>
